build: test 관련 libs.version 추가